--- a/_includes/author.html
+++ b/_includes/author.html
@@ -1,7 +1,7 @@
 <section class="author" itemprop="author">
   <div class="details" itemscope itemtype="http://schema.org/Person">
     <img itemprop="image" class="img-rounded" src="https://avatars2.githubusercontent.com/u/42578157?s=460&v=4" alt="{{ site.name }}">
-    <p class="def">Author</p>
+    <p class="def">자기 소개</p>
     <h3 class="name">
       <a itemprop="name" href="https://github.com/{{ site.github_username }}">{{ site.username }}</a>
     </h3>
