--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -42,5 +42,10 @@
             {% include comments.html %}
             {% include footer.html %}
         </section>
+        
+        /*추가*/
+        
+        <script src="/js/jquery.com.min.js"></script>
+        {% include open-embed.html %}
     </body>
 </html>
