--- a/_includes/menu.html
+++ b/_includes/menu.html
@@ -6,6 +6,7 @@
           <li><a href="{{ site.url }}{{ site.baseurl }}{{ link.url }}">{{ link.title }}</a></li>
         {% endfor %}
       <li><a class="feed" href="{{ site.url }}{{site.baseurl}}/feed.xml" title="Atom/RSS feed">Feed</a></li>  
+      <li><a href="{{ site.url }}/category/독서노트" title="독서노트-">독서노트</a></li>      
       </ul>
     </nav>
 </aside>
