--- a/_includes/menu.html
+++ b/_includes/menu.html
@@ -6,7 +6,33 @@
           <li><a href="{{ site.url }}{{ site.baseurl }}{{ link.url }}">{{ link.title }}</a></li>
         {% endfor %}
       <li><a class="feed" href="{{ site.url }}{{site.baseurl}}/feed.xml" title="Atom/RSS feed">Feed</a></li>  
-      <li><a href="{{ site.url }}/category/독서노트" title="독서노트-">독서노트</a></li>      
       </ul>
+        
+      <hr />
+      <ul>창작노트
+      <li><a href="{{ site.url }}/category/단편소설" title="카테고리 메뉴">- 단편소설</a></li>
+      <li><a href="{{ site.url }}/category/Life" title="카테고리 메뉴">- Life</a></li>
+      <li><a href="{{ site.url }}/category/shadowrun" title="카테고리 메뉴">- shadowrun</a></li>
+      <li><a href="{{ site.url }}/category/방과후던전탐험대" title="카테고리 메뉴">- 방과후던전탐험대</a></li>
+      </ul>
+        
+      <hr />  
+      <ul>전자책 이야기
+      <li><a href="{{ site.url }}/category/전자책동네이야기" title="카테고리 메뉴">- 전자책동네이야기</a></li>
+      <li><a href="{{ site.url }}/category/전자책세미나_강의" title="카테고리 메뉴">- 전자책세미나_강의</a></li>
+      </ul>
+      
+      <hr />  
+      <ul>감상노트
+      <li><a href="{{ site.url }}/category/독서노트" title="카테고리 메뉴">- 독서노트</a></li>  
+     <li><a href="{{ site.url }}/category/영화노트" title="카테고리 메뉴">- 영화노트</a></li>
+     <li><a href="{{ site.url }}/category/전시회노트" title="카테고리 메뉴">- 전시회노트</a></li>
+      </ul>  
+        
+       <hr />  
+      <ul>
+      <li><a href="{{ site.url }}/category/etc" title="카테고리 메뉴">etc</a></li>
+       </ul>   
+        
     </nav>
 </aside>
