--- a/_includes/menu.html
+++ b/_includes/menu.html
@@ -15,7 +15,7 @@
       </ul>
   
       <ul>
-      <li style="margn-left: 1em;">감상노트</li>
+      <li style="pdding-left: 1em;">감상노트</li>
       <li><a href="{{ site.url }}/category/독서노트" title="카테고리 메뉴">- 독서노트</a></li>  
       <li><a href="{{ site.url }}/category/영화노트" title="카테고리 메뉴">- 영화노트</a></li>
       <li><a href="{{ site.url }}/category/전시회노트" title="카테고리 메뉴">- 전시회노트</a></li>
