--- a/_includes/menu.html
+++ b/_includes/menu.html
@@ -7,22 +7,22 @@
         {% endfor %}
       <li><a class="feed" href="{{ site.url }}{{site.baseurl}}/feed.xml" title="Atom/RSS feed">Feed</a></li>  
       </ul>
-  
+        
+      <h2>전자책 이야기</h2>
       <ul>
-      <li>전자책 이야기</li>
       <li><a href="{{ site.url }}/category/전자책동네이야기" title="카테고리 메뉴">- 전자책동네이야기</a></li>
       <li><a href="{{ site.url }}/category/전자책세미나_강의" title="카테고리 메뉴">- 전자책세미나_강의</a></li>
       </ul>
   
-      <h3>감상노트</h3>
+      <h2>감상노트</h2>
       <ul>
       <li><a href="{{ site.url }}/category/독서노트" title="카테고리 메뉴">- 독서노트</a></li>  
       <li><a href="{{ site.url }}/category/영화노트" title="카테고리 메뉴">- 영화노트</a></li>
       <li><a href="{{ site.url }}/category/전시회노트" title="카테고리 메뉴">- 전시회노트</a></li>
       </ul>  
- 
+        
+      <h2>창작노트</h2>
       <ul>
-      <li>창작노트</li>
       <li><a href="{{ site.url }}/category/단편소설" title="카테고리 메뉴">- 단편소설</a></li>
       <li><a href="{{ site.url }}/category/Life" title="카테고리 메뉴">- Life</a></li>
       <li><a href="{{ site.url }}/category/shadowrun" title="카테고리 메뉴">- shadowrun</a></li>
